<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover"
    tools:context=".AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="About Primal Emotions:"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.171"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.074" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Happiness (Joy) -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Happiness (Joy)"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/happiness_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/happiness_description"
                android:textColor="#E48D4B"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/happiness_tips_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="Tips for Managing Happiness:"
                android:textColor="#1B1515"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/happiness_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:lineSpacingMultiplier="1.2"
                android:paddingLeft="5dp"
                android:text="@string/happiness_tips"
                android:textColor="#E48D4B" />

            <!-- Sadness -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sadness"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/sadness_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/sadness_description"
                android:textColor="#2158B8"
                android:textColorLink="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sadness_tips_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="Tips for Managing Sadness:"
                android:textColor="#1B1515"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sadness_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:lineSpacingMultiplier="1.2"
                android:paddingLeft="5dp"
                android:text="@string/sadness_tips"
                android:textColor="#2158B8"
                android:textSize="14sp" />

            <!-- Anger -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Anger"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/anger_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/anger_description"
                android:textColor="#D52424"
                android:textColorLink="#C11D1D"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/anger_tips_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="Tips for Managing Anger:"
                android:textColor="#1B1515"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/anger_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:lineSpacingMultiplier="1.2"
                android:paddingLeft="5dp"
                android:text="@string/anger_tips"
                android:textColor="#D52424" />

            <!-- Fear -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fear"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/fear_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/fear_description"
                android:textColor="#A331D3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fear_tips_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="Tips for Managing Fear:"
                android:textColor="#1B1515"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fear_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:lineSpacingMultiplier="1.2"
                android:paddingLeft="5dp"
                android:text="@string/fear_tips"
                android:textColor="#A331D3" />


            <!-- Surprise -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Surprise"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/surprise_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/surprise_description"
                android:textColor="#819707"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/surprise_tips_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="Tips for Managing Surprise:"
                android:textColor="#1B1515"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/surprise_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:lineSpacingMultiplier="1.2"
                android:paddingLeft="5dp"
                android:text="@string/surprise_tips"
                android:textColor="#819707" />


        </LinearLayout>
    </ScrollView>



</FrameLayout>